tests/typing/fail/extend_obj_fail.rb

module M
  def f()
  end
end


class A
end

a = A.new
a.extend(M)
A.f


